# Poker-In-C

./: CMakeLists.txt  README.md  contributors.txt  demo.c  poker.c  poker.h  poker.sh  poker_game.sh  test.c
conf/Terminal/: terminalrc
conf/xfce4/terminal/: terminalrc
src/: Copy of poker.c  Doxyfile  card.c  card.h  deck.c  deck.h  demo.c  display.c  display.h  doxygen_sqlite3.db  gameround.c  gameround.h  player.c  player.h  poker.c  poker.h  poker_game.c
src/doc/: doxygen_sqlite3.db
src/doc/html/: annotated.html  card_8c.html  card_8h.html  card_8h_source.html  classes.html  deck_8c.html  deck_8h.html  deck_8h_source.html  demo_8c.html  display_8c.html  display_8h.html  display_8h_source.html  files.html  functions.html  functions_vars.html  gameround_8c.html  gameround_8h.html  gameround_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_k.html  globals_l.html  globals_m.html  globals_n.html  globals_p.html  globals_q.html  globals_r.html  globals_s.html  globals_t.html  (+24 more)
src/doc/latex/: card_8c.tex  card_8h.tex  deck_8c.tex  deck_8h.tex  demo_8c.tex  display_8c.tex  display_8h.tex  files.tex  gameround_8c.tex  gameround_8h.tex  player_8c.tex  player_8h.tex  poker_8c.tex  poker_8h.tex  poker__game_8c.tex  (+7 more)
src/html/: annotated.html  card_8h_source.html  classes.html  deck_8h_source.html  display_8h_source.html  files.html  functions.html  functions_vars.html  gameround_8h_source.html  graph_legend.html  index.html  player_8h_source.html  poker_8h_source.html  structCard-members.html  structCard.html  structDeck-members.html  structDeck.html  structDeck__coll__graph.dot  structDeck__coll__graph.md5  structGame__round-members.html  structGame__round.html  structPlayer-members.html  structPlayer.html  structPlayer__coll__graph.dot  structPlayer__coll__graph.md5  structPoker__hands-members.html  structPoker__hands.html  structdisplay-members.html  structdisplay.html
src/latex/: annotated.tex  refman.tex  structCard.tex  structDeck.tex  structDeck__coll__graph.dot  structDeck__coll__graph.md5  structGame__round.tex  structPlayer.tex  structPlayer__coll__graph.dot  structPlayer__coll__graph.md5  structPoker__hands.tex  structdisplay.tex
(+90 files in other folders)
